--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
         <div class="logo">
         <h1>Cigivar</h1>
-        <h2>Кладовая Мира</h2>
+        <h2>Что такое память?...</h2>
         </div>
     </div></a>
         </div></header>
