--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </div>
             <aside class="sidebar">
                             </aside>
-        <textarea>
+        <textarea rows="10" cols="10">
             Заголовок: Style.css
 /**
  * Theme Name:  Название темы
