--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                             </div>
             <aside class="sidebar">
                             </aside>
-        <textarea rows="10" cols="10">
-            Заголовок: Style.css
-/**
+	<dl>
+		<dt> Полный: Style.css</dt>
+		<dd>
+			<p>
+				/**
  * Theme Name:  Название темы
  * Theme URI:   URL темы в каталоге WordPress или где-то еще. Пример: http://wordpress.org/themes/twentythirteen
  * Author:      Имя автора темы
@@ -50,6 +52,11 @@
  * Text Domain: Домен перевода для темы. Нужен чтобы можно было перевести описание указанное в Description. Например: twentythirteen
  * Version:     Версия темы. Пример: 1.0
  */
+			</p>
+		</dd>
+	</dl>
+           
+
 Стандартный шаблон в wp
 
 	
